--- a/templates/tzxx/register.htm
+++ b/templates/tzxx/register.htm
@@ -82,10 +82,10 @@
         <td>
 		<input name="reg2" type="submit" class="newFormBtn_red2" id="" value="立即登录"  onclick="window.location='member.php?act=login&refer={$PHP_URL}'" /></td>
       </tr>
-      <tr>
-        <td><strong style="color: #009900">如果您是商家</strong> <br />
-            注册会员后可发布你的商店商品信息...</td>
-      </tr>
+      <!--<tr>-->
+        <!--<td><strong style="color: #009900">如果您是商家</strong> <br />-->
+            <!--注册会员后可发布你的商店商品信息...</td>-->
+      <!--</tr>-->
  
       <tr>
         <td>&nbsp;</td>
