打开admin左侧交易管理的菜单

--- a/admin/templates/left.htm
+++ b/admin/templates/left.htm
@@ -502,7 +502,7 @@ window.onload=function()
 
 	</div>
 
-	<!-- <div class="tit" id="menu6" >
+	 <div class="tit" id="menu6" >
 	
 		<div class="titpic" id="pc6"></div>
 	
@@ -520,7 +520,7 @@ window.onload=function()
 	
 		</ul>
 	
-	</div> -->
+	</div> 
 
 
 
