--- a/templates/tzxx/category.htm
+++ b/templates/tzxx/category.htm
@@ -18,26 +18,65 @@
 				effect : "fadeIn"
 			});
 		});
-        function layerOpen() {
-            layer.open({
-                icon: 0,
-                //shade: [0.8, '#393D49'],
-                skin: 'layui-layer-lan',
-                title:'消息',
-                content: '<span style="color:red;">本类信息仅供会员浏览，会员服务费10元每月</span>',
-                btn: ['去登陆', '购买'],
-                yes: function(){
-                    location.href='member.php?act=login'
-                },
-                btn2: function(){
-                    //按钮【按钮二】的回调
-                    window.open("member.php?act=payonline")
-                    //return false 开启该代码可禁止点击该按钮关闭
-                }
-            });
+        function layerOpen(isMemberSelf,jumpUrl,isMemberGoldEnough,infoid) {
+            var _userid = {$_userid};
+			var _token= '{$memberToken}';
+            if(_userid){
+				if(isMemberSelf){
+                    window.open(jumpUrl);
+				}else{
+					//如果费用充足
+					if(isMemberGoldEnough){
+                        layer.open({
+                            icon: 0,
+                            skin: 'layui-layer-lan',
+                            title:'消息',
+                            content: '<span style="color:red;" id="layerSpan">本类信息需付费，每条<i style="color:blue;">1</i>信息币.继续浏览将付费(24小时内重复浏览不会重复计费)</span>',
+                            btn: ['确认', '取消'],
+                            yes: function(){
+                                $.ajax({
+                                        type:'post',
+                                        url:'category.php',
+                                        data:{act:"gold_diff",userid:_userid,token:_token,infoid:infoid},
+										datatype:"json",
+                                        success:function (data) {
+                                            var data = JSON.parse(data);//ajax解析json要用eval();（此方法不推荐）或JSON.parse();（推荐）
+                                            if(data.error==200){
+                                                location.href=jumpUrl;
+											}else{
+                                                $("#layerSpan").text(data.content);
+											}
+                                        }
+								});
+                            },
+                        });
+					}else{
+                        layer.open({
+                            icon: 0,
+                            skin: 'layui-layer-lan',
+                            title:'消息',
+                            content: '<span style="color:red;">本类信息需付费，每条<i style="color:blue;">1</i>信息币.但您的费用不足，确认将会跳转到购买信息币页面</span>',
+                            btn: ['确认', '取消'],
+                            yes: function(){
+                                location.href='member.php?act=gold'
+                            }
+                        });
+					}
+				}
+			}else{
+                layer.open({
+                    icon: 0,
+                    skin: 'layui-layer-lan',
+                    title:'消息',
+                    content: '<span style="color:red;">本类信息需付费，每条<i style="color:blue;">1</i>信息币.请先登录</span>',
+                    btn: ['登录', '取消'],
+                    yes: function(){
+                        location.href='member.php?act=login'
+                    }
+                });
+			}
         }
 	</script>
-
 </head>
 <body class="home-page">
 <!--{template header}-->
@@ -115,7 +154,7 @@
 <td width="9%" rowspan="2" height="65" align="center" valign="middle">{if $val[thumb]}<img data-original="{$val[thumb]}" src="js/grey.gif" style="width:60px;height:60px; border-radius:5%; border:#fff 3px solid" alt="{$val[title]}">
 {else}<img  data-original="templates/{$CFG[tplname]}/images/nosmall.gif" src="js/grey.gif" style="width:60px;height:60px; border-radius:5%; border:#fff 3px solid" alt="{$val[title]}">
 {/if}</td>
-    <td width="72%" height="30"><a href="{$val[url]}" target="_blank" onclick="layerOpen()">{$val[title]}</a>&nbsp;&nbsp;<font color="#ff5500" style="font-size:12px;">{$val[areaname]}</font>&nbsp;&nbsp;<font color="#007700">{$val[catname]}</font></td>
+    <td width="72%" height="30">{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});">{$val[title]}</a>{else}<a href="{$val[url]}" target="_blank">{$val[title]}</a>{/if}&nbsp;&nbsp;<font color="#ff5500" style="font-size:12px;">{$val[areaname]}</font>&nbsp;&nbsp;<font color="#007700">{$val[catname]}</font></td>
 <td width="10%" align="center"><span style="color:#f80;font-size:12px;">{$val[postdate]}</span></td>
 <td width="9%" align="center"><span style="color:#888;font-size:12px; padding-right:12px;">点击：{$val[click]}</span></td>
     
