--- a/templates/tzxx/index.htm
+++ b/templates/tzxx/index.htm
@@ -8,7 +8,7 @@
 <link href="templates/{$CFG[tplname]}/style/index.css" type="text/css" rel="stylesheet" />
 <script src="js/common.js"></script>
 <script src="js/hdpic.js"></script>
-<script src="js/jquey.js"></script>
+<script src="js/jquey.js"></script><script type="text/javascript" src="js/layer/layer.js"></script>
 </head>
 <body class="home-page">
 <!--{template header}-->
@@ -34,15 +34,14 @@
 				document.write('<param name="FlashVars" value="pics='+pics+'&links='+links+'&texts='+texts+'&borderwidth='+focus_width+'&borderheight='+focus_height+'&textheight='+text_height+'">');
 				document.write('<embed src="images/flashplay.swf" wmode="opaque" FlashVars="pics='+pics+'&links='+links+'&texts='+texts+'&borderwidth='+focus_width+'&borderheight='+focus_height+'&textheight='+text_height+'" menu="false" bgcolor="#ffffff" quality="high" width="'+ focus_width +'" height="'+ focus_height +'" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />');		
 				document.write('</object>');
-			//-->
+			//-->		function layerOpen(isMemberSelf,jumpUrl,isMemberGoldEnough,infoid) {					var _userid = {$_userid};					var _token= '{$memberToken}';					if(_userid){						if(isMemberSelf){							window.open(jumpUrl);						}else{							//如果费用充足							if(isMemberGoldEnough){								layer.open({									icon: 0,									skin: 'layui-layer-lan',									title:'消息',									content: '<span style="color:red;" id="layerSpan">本类信息需付费，每条<i style="color:blue;">1</i>信息币.继续浏览将付费(24小时内重复浏览不会重复计费)</span>',									btn: ['确认', '取消'],									yes: function(){										$.ajax({												type:'post',												url:'category.php',												data:{act:"gold_diff",userid:_userid,token:_token,infoid:infoid},												datatype:"json",												success:function (data) {													var data = JSON.parse(data);//ajax解析json要用eval();（此方法不推荐）或JSON.parse();（推荐）													if(data.error==200){														location.href=jumpUrl;													}else{														$("#layerSpan").text(data.content);													}												}										});									},								});							}else{								layer.open({									icon: 0,									skin: 'layui-layer-lan',									title:'消息',									content: '<span style="color:red;">本类信息需付费，每条<i style="color:blue;">1</i>信息币.但您的费用不足，确认将会跳转到购买信息币页面</span>',									btn: ['确认', '取消'],									yes: function(){										location.href='member.php?act=gold'									}								});							}						}					}else{						layer.open({							icon: 0,							skin: 'layui-layer-lan',							title:'消息',							content: '<span style="color:red;">本类信息需付费，每条<i style="color:blue;">1</i>信息币.请先登录</span>',							btn: ['登录', '取消'],							yes: function(){								location.href='member.php?act=login'							}						});					}				}
 			</script>
 			</div>
 			<div class="news">
 				
 				<!-- 置顶信息 -->
 				<ul class="news_top">
-				{loop $top_info $val}
-				<li><a href="{$val['url']}" target="_blank" title="{$val['title']}" class="blue">{$val['title']}</a></li>
+				{loop $top_info $val}<li>{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" class="blue" title="{$val['title']}">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="blue">{$val['title']}</a>{/if}</li>
 				{/loop}
 				</ul>
 				<!-- 最新信息 -->
@@ -129,7 +128,7 @@
 			<h6><span><a href="category.php?id=96">更多最新</a></span><a href="category.php?id=96">便民服务</a></h6>
 			<ul>
 			{loop $new_info_7 $val}
-			<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
+			<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
 			{/loop}
 			</ul>
 		</div>
@@ -137,7 +136,7 @@
 		<div id="ilist99" style="border-right:#e8e8e8 1px solid">
 		<h6><span><a href="category.php?id=2">更多最新</a></span><a href="category.php?id=2">房屋租售</a></h6><ul>
 		{loop $new_info_2 $val}
-		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
+		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
 		{/loop}
 		</ul>
 		</div>
@@ -145,7 +144,7 @@
 		<div id="ilist99">
 		<h6><span><a href="category.php?id=1">更多最新</a></span><a href="category.php?id=1">创业</a></h6><ul>
 		{loop $new_info_1 $val}
-		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
+		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
 		{/loop}
 		</ul>
 		</div>
@@ -157,7 +156,7 @@
 		<div id="ilist99" style="border-right:#e8e8e8 1px solid">
 		<h6><span><a href="category.php?id=4">更多最新</a></span><a href="category.php?id=4">生活服务</a></h6><ul>
 		{loop $new_info_4 $val}
-		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
+		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
 		{/loop}
 		</ul>
 		</div>
@@ -165,7 +164,7 @@
 		<div id="ilist99" style="border-right:#e8e8e8 1px solid">
 		<h6><span><a href="category.php?id=3">更多最新</a></span><a href="category.php?id=3">二手买卖</a></h6><ul>
 		{loop $new_info_3 $val}
-		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
+		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
 		{/loop}
 		</ul>
 		</div>
@@ -173,7 +172,7 @@
 		<div id="ilist99">
 		<h6><span><a href="category.php?id=5">更多最新</a></span><a href="category.php?id=5">健康生活</a></h6><ul>
 		{loop $new_info_5 $val}
-		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
+		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
 		{/loop}
 		</ul>
 		</div>
@@ -184,7 +183,7 @@
 		<div id="ilist99" style="border-right:#e8e8e8 1px solid">
 		<h6><span><a href="category.php?id=7">更多最新</a></span><a href="category.php?id=7">交友征婚</a></h6><ul>
 		{loop $new_info_9 $val}
-		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
+		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
 		{/loop}
 		</ul>
 		</div>
@@ -192,7 +191,7 @@
 		<div id="ilist99" style="border-right:#e8e8e8 1px solid">
 		<h6><span><a href="category.php?id=6">更多最新</a></span><a href="category.php?id=6">车辆信息</a></h6><ul>
 		{loop $new_info_6 $val}
-		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
+		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
 		{/loop}
 		</ul>
 		</div>
@@ -200,8 +199,8 @@
 		<div id="ilist99">
 		<h6><span><a href="category.php?id=119">更多最新</a></span><a href="category.php?id=119">宠物信息</a></h6><ul>
 		{loop $new_info_8 $val}
-		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a></li>
-		{/loop}
+		<li><span style="float:right; font-size:11px;font-family:Arial; padding-left:10px;">{$val['postdate']}</span><font color="#ff6600">[{$val['areaname']}]</font>&nbsp;{if $val[needPay]}<a href="javascript:void(0);"  onclick="layerOpen({$val[isMemberSelf]},'{$val[url]}',{$val[isMemberGoldEnough]},{$val[id]});" title="{$val['title']}" class="red">{$val[title]}</a>{else}<a href="{$val['url']}" target="_blank" title="{$val['title']}" class="red">{$val['title']}</a>{/if}</li>
+		{/loop}
 		</ul>
 		</div>
 	</div>
