--- a/templates/default/view.htm
+++ b/templates/default/view.htm
@@ -70,7 +70,7 @@ function chktype()
  <tr><td colspan="2">
 <div class="h_title_bottom">
 <ul class="menu clearfix">
-<li>信息编号：<span>INFO_2014_{$id}</span></li>
+<li>信息编号：<span>INFO_{$thisYear}_{$id}</span></li>
 <li>发布时间：<span>{$postdate}</span></li>
 <li>有效期：<span>{$lastdate}</span></li>
 <li>点击：<span>{$click}</span>次</li>
