修改浏览付费信息时扣除信息币金额为后台可配置的

--- a/admin/templates/set_config.htm
+++ b/admin/templates/set_config.htm
@@ -120,27 +120,27 @@ for(i=0; i <tabList.length; i++)
   </tr>
   <tr bgcolor=#FFFFFF>
     <td><div align="right">网站客服电话：</div></td>
-    <td><input name="phone" type=text id="phone" value="<?=$CFG[phone]?>"  size=45  class="dfinput"> class="dfinput">
+    <td><input name="phone" type=text id="phone" value="<?=$CFG[phone]?>"  size=45  class="dfinput"> 
       </td>
   </tr>
   <tr bgcolor=#FFFFFF>
     <td><div align="right">客服QQ号：</div></td>
-    <td><input name="qq" type=text id="qq" value="<?=$CFG[qq]?>"  size=45  class="dfinput"> class="dfinput">
+    <td><input name="qq" type=text id="qq" value="<?=$CFG[qq]?>"  size=45  class="dfinput"> 
       多个QQ号，用 &quot;|&quot; 隔开 。 </td>
   </tr>
   <tr bgcolor=#FFFFFF>
     <td><div align="right">网站QQ群：</div></td>
-    <td><input name="qqun" type=text id="qqun" value="<?=$CFG[qqun]?>"  size=45  class="dfinput"> class="dfinput">
+    <td><input name="qqun" type=text id="qqun" value="<?=$CFG[qqun]?>"  size=45  class="dfinput"> 
       </td>
   </tr>
   <tr bgcolor=#FFFFFF>
     <td><div align="right">网站email：</div></td>
-    <td><input name="email" type=text id="email" value="<?=$CFG[email]?>"  size=45  class="dfinput"> class="dfinput">
+    <td><input name="email" type=text id="email" value="<?=$CFG[email]?>"  size=45  class="dfinput"> 
       </td>
   </tr>
   <tr bgcolor=#FFFFFF>
     <td><div align="right">网站备案号：</div></td>
-    <td><input name="icp" type=text id="icp" value="<?=$CFG[icp]?>"  size=45  class="dfinput"> class="dfinput"></td>
+    <td><input name="icp" type=text id="icp" value="<?=$CFG[icp]?>"  size=45  class="dfinput"> </td>
   </tr>
   <tr bgcolor=#FFFFFF>
     <td><div align="right">模板目录名称：</div></td>
@@ -176,7 +176,7 @@ for(i=0; i <tabList.length; i++)
   
   <tr bgcolor=#FFFFFF>
     <td><div align="right">加密字符：</div></td>
-    <td><input name="crypt" type=text id="crypt" value="<?=$CFG[crypt]?>"  size=45  class="dfinput"> class="dfinput"></td>
+    <td><input name="crypt" type=text id="crypt" value="<?=$CFG[crypt]?>"  size=45  class="dfinput"> </td>
   </tr>
   
   
@@ -364,6 +364,10 @@ for(i=0; i <tabList.length; i++)
 <tr bgcolor=#FFFFFF>
   <td height=40><div align="right">资金购买信息币比例：</div></td>
   <td><input name="money2gold" type="text" size="20" value="<?=$CFG[money2gold]?>"  class="dfinput"> 元/每信息币</td>
+</tr>
+<tr bgcolor=#FFFFFF>
+  <td height=40><div align="right">浏览付费信息扣除信息币：</div></td>
+  <td><input name="info_gold_diff" type="text" size="20" value="<?=$CFG[info_gold_diff]?>"  class="dfinput"> 信息币</td>
 </tr>
 </table></div>
       <div id="myTab0_Content2" class="none"><table width=96% align=center border=0 cellspacing=0 cellpadding=0 >
